slick test changes 2

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         body{
             margin: 0;
             padding: 0;
+            padding-bottom: 50px;
         }
         .page-header{
             text-align: center;
@@ -23,7 +24,7 @@
             margin-top: 50px;
             padding: 30px;
             width: 480px;
-            min-height: 480px;
+            min-height: 200px;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
@@ -66,6 +67,16 @@
                 <img src="https://picsum.photos/id/35/512/512" alt="img 3" />
             </div>
         </div>
+    </div>
+    <div class="wrapper">
+        <h4>Title for content</h4>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Voluptatum perferendis sequi temporibus officiis voluptates. <a href="">Link 1</a>
+            Cum eum repellat quam neque perspiciatis repellendus perferendis ipsam beatae veniam harum, 
+            nisi voluptatum qui aliquam.
+            <a href="">Link 2</a>
+        </p>
     </div>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
