--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             z-index: 1;
             
         }
+        .my-slider .slick-arrow:focus{
+            border: 2px solid red;
+        }
         .my-slider .slick-prev{
             bottom: 0;
             left: 0
@@ -47,6 +50,9 @@
         }
         .my-slider .slick-dots li{
             display: inline-block;
+        }
+        .my-slider .slick-dots li button:focus{
+            border: 2px solid red;
         }
     </style>
 </head>
@@ -88,7 +94,8 @@
                 infinite: true,
                 slidesToShow: 1,
                 slidesToScroll: 1,
-                dots: true
+                dots: true,
+                accessibility: true
             });
         });
     </script>
