slick test changes

--- a/index.html
+++ b/index.html
@@ -64,13 +64,19 @@
         
         <div class="my-slider">
             <div class="featured-image">
-                <img src="https://picsum.photos/id/1/512/512" alt="img 1" />
+                <picture>
+                    <img src="https://picsum.photos/id/1/512/512" alt="img 1" />
+                </picture>
             </div>
             <div class="featured-image"> 
-                <img src="https://picsum.photos/id/22/512/512" alt="img 2" />
+                <picture>
+                    <img src="https://picsum.photos/id/22/512/512" alt="img 2" />
+                </picture>
             </div>
-            <div class="featured-image"ß> 
-                <img src="https://picsum.photos/id/35/512/512" alt="img 3" />
+            <div class="featured-image"> 
+                <picture>
+                    <img src="https://picsum.photos/id/35/512/512" alt="img 3" />
+                </picture>
             </div>
         </div>
     </div>
