slick test changes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             border-radius: 5px;
         }
         .my-slider .slick-arrow{
+            display: none !important;
             position: absolute;
             z-index: 1;
             
