slick test changes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+        @media screen and (max-width: 512px) {
+            .wrapper {
+                width: 100%;
+            }
+        }
         .my-slider .slick-arrow{
             display: none !important;
             position: absolute;
