slick test changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             }
         }
         .my-slider .slick-arrow{
-            display: none !important;
+            /*display: none !important;*/
             position: absolute;
             z-index: 1;
             
@@ -107,7 +107,8 @@
                 slidesToShow: 1,
                 slidesToScroll: 1,
                 dots: true,
-                accessibility: true
+                accessibility: true,
+                arrows: false
             });
         });
     </script>
