slick test changes

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         .my-slider .slick-dots li button:focus{
             border: 2px solid red;
         }
+        .featured-image img{
+            width: 100%;
+        }
     </style>
 </head>
 <body>
